--- a/views/admin/add-product.pug
+++ b/views/admin/add-product.pug
@@ -11,4 +11,16 @@ block content
                 label(for="title") Title
                 input(type="text" name="title")#title
 
+            .form-control
+                label(for="imageUrl") Image URL
+                input(type="text" name="imageUrl")#imageUrl
+
+            .form-control
+                label(for="price") Price
+                input(type="number" name="price" step="0.01")#price
+
+            .form-control
+                label(for="description") Description
+                textarea(name="description" rows="5")#description
+
             button(type="submit") Add Product
