--- a/views/shop/product-list.pug
+++ b/views/shop/product-list.pug
@@ -12,13 +12,14 @@ block content
                     article.card.product-item
                         header.card__header
                             h1.product__title #{product.title}
-                        .card__iamge 
-                            img(src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png" alt="A Book")
+                        .card__image 
+                            img(src=product.imageUrl alt=product.title)
 
                         .card__content
-                            h2.product__price $19.99
-                            p.product__desscription A very interesting book about so many even more interesting things! 
-                        .card__action
-                            button.btn Add tro Cart
+                            h2.product__price #{product.price}
+                            p.product__description #{product.description}
+                        .card__actions
+                            form(action="/add-to-cart" method="POST")
+                                button.btn Add to Cart
         else 
             h1 No Products
