--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -3,3 +3,14 @@ extends ../layouts/main-layout.pug
 block styles 
     link(rel="stylesheet", href="/css/forms.css")
 
+black content
+    if product.length > 0
+        ul
+            each p in products
+                li
+                    p #{p.productData.title} (#{p.qty})
+                    form(action="/cart-delete-item" method="POST")
+                        input(type="hidden" value=p.productData.id name="productId")
+                        button.btn(type="submit") Delete
+    else 
+        h1 No Product in Cart!
