--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -1,16 +1,22 @@
 extends ../layouts/main-layout.pug
 
 block styles 
-    link(rel="stylesheet", href="/css/forms.css")
+    link(rel="stylesheet", href="/css/cart.css")
 
-black content
-    if product.length > 0
-        ul
+block content
+    if products.length > 0
+        ul.cart__item-list
             each p in products
-                li
-                    p #{p.productData.title} (#{p.qty})
+                li.cart__item
+                    h1 #{p.title}
+                    h2 Quantity: #{p.cartItem.quantity}
                     form(action="/cart-delete-item" method="POST")
-                        input(type="hidden" value=p.productData.id name="productId")
-                        button.btn(type="submit") Delete
+                        input(type="hidden" value=p.id name="productId")
+                        button.btn.danger(type="submit") Delete
+        hr
+        div.centered
+            form(action="/create-order" method="POST")
+                button.btn(type="submit") Order Now!
+
     else 
         h1 No Product in Cart!
